# wwdc-dl

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  condensor.prompt  main.py  pyproject.toml  wwdc25-swift-concurrency.xml
app-intents-knowledge/: 230-wake-up-to-alarmkit-api.md  244-get-to-know-app-intents.md  260-develop-for-shortcuts-and-spotlight-with-app-intents.md  275-explore-new-advances-in-app-intents.md  281-design-interactive-snippets.md  README.md  quick-reference.md
docs/: CLAUDE.md  CRAWL_SUMMARY.md  README.md  add-frontmatter.py  crawled-urls.md  docc_url_converter.py  swift-org-json-urls.txt
docs/prompts/: docc-archive.prompt.md  html-to-markdown.prompt.md  restructure-wwdc.prompt.md  wwdc-session.prompt.md
docs/sources/apple-dev/: updating-app-swift-concurrency.md
docs/sources/blogs/: avanderlee-default-actor-isolation.md  avanderlee-swift-6-2-concurrency.md  avanderlee-swift-6-migration.md  hackingwithswift-swift-6-2.md  inessential-api-design-main-thread.md  massicotte-awakefromnib.md  massicotte-complete-checking.md  massicotte-concurrency-6-1.md  massicotte-concurrency-glossary.md  massicotte-concurrency-swift-6-se-401.md  massicotte-concurrency-swift-6-se-411.md  massicotte-crossing-the-boundary.md  massicotte-default-isolation-swift-6-2.md  massicotte-dynamic-isolation.md  (+23 more)
src/wwdc/: __init__.py  __main__.py  cli.py  downloader.py  exporter.py  frame_extractor.py  parser.py  summarizer.py
tests/: 280-code-along-cook-up-a-rich-text-experience.html  __init__.py  test_parser.py
wwdc-content/2025/: metadata.json
(+20 files in other folders)
