[project]
name = "wwdc"
version = "0.1.0"
description = "WWDC Content Manager - Download, List, Summarize, and Export Apple Developer Content"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.12",
    "beautifulsoup4>=4.13.4",
    "click>=8.1.0",
    "lxml>=5.4.0",
    "rich>=14.0.0",
    "yt-dlp>=2025.6.9",
]

[project.scripts]
wwdc = "wwdc.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pyright>=1.1.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"
